fix: handle BadCredentialsException and return 401 with user-friendly message